# Lichess_Batch_Pipeline

./: .env  .gitignore  Dockerfile  Dockerfile.airflow  README.md  __init__.py  csv_processor.py  docker-compose.yaml  main.py  pgn_parser.py  processing.py  processor.py  pyproject.toml  requirements.txt  unit.py
airflow/: .gitignore  Dockerfile  airflow.cfg  docker-compose.yaml
airflow/dags/: chess_monthly_batch_pipeline.py  chess_monthly_batch_pipeline_local.py  mock_chess_monthly_batch_pipeline.py  test_spark_job.py
airflow/jobs/: convert_csv_to_parquet.py
airflow/spark-jobs/: convert_csv_to_parquet.py  transform_chess_batch_data.py
pgn2csv/: __init__.py  __main__.py  engine.py  match.py
terraform/: main.tf  variables.tf
